# ryser

./: .gitattributes  .gitignore  .ninja_log  .prettierignore  CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  README.md  build.bat  build.ninja  build_clang.bat  clang.bat  config.json  index.html  package-lock.json  package.json
.claude/: settings.local.json
create_installer/config/: config.xml
src/: AddLibrary.jsx  App.css  App.jsx  ContextMenu.css  ContextMenu.jsx  CoverPickerTooltip.jsx  CoverPickerTooltip.module.css  CreateLibrary.jsx  Dropdown.jsx  EditVideoEntry.module.css  EditVideoEntryView.jsx  HeaderBar.css  HeaderBar.jsx  HomeView.cpp  HomeView.hh  LibraryView.hh  LibraryView.jsx  MainMenu.jsx  NotificationManager.css  NotificationManager.jsx  QtUI.cpp  QtUI.hh  TMDBResults.css  TMDBResults.module.css  main.cpp  main.jsx  manageconfig.cpp  manageconfig.hh  pch.cpp  pch.hh  videoplayer.cpp  videoplayer.hh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_reader.rs  gui_utils.rs  init.rs  lib.rs  main.rs  run.rs  video_player.rs
src-tauri/src/_debug_run/: mod.rs
src-tauri/src/app_start/: default_config_json.rs  mod.rs
src-tauri/src/config/: default_config.rs  mod.rs  read_json.rs
src-tauri/src/library_manager/: file_reader.rs  gui_functions.rs  json_parser.rs  lang_map.rs  library_manager.rs  mod.rs  playback_selection.rs  tmdb_api.rs  utils.rs  video_element.rs
src-tauri/src/library_manager/file_manager/: create_video_element.rs  directory_utils.rs  file_utils.rs  mod.rs  read_metadata.rs
src-tauri/src/library_manager/file_reader/: directory_utils.rs  mod.rs  read_metadata.rs
src-tauri/src/library_manager/tmdb_api/: api_token.rs  json_structs.rs  mod.rs  search_name_creator.rs  tmdb_client.rs
src-tauri/src/notifications/: mod.rs  notification_manager.rs  send.rs
src-tauri/src/tmdb_api/: api_token.rs  mod.rs
src-tauri/src/video_player/: error.rs  gui.rs  mod.rs  process_manager.rs
src/LibraryDataManagement/: EditVideoEntryView.jsx  TMDBResults.module.css
src/LibraryManagement/: AddLibrary.jsx  CreateLibrary.jsx
src/LibraryView/: LibraryView.jsx  LibraryViewUtils.js  VideoElementContextMenu.js
src/LibraryView/LibraryDataManagement/: CoverPickerTooltip.jsx  CoverPickerTooltip.module.css  EditVideoEntry.module.css  EditVideoEntryView.jsx  TMDBResults.module.css
src/MainMenu/: MainMenu.jsx
src/QtUI/: HomeView.cpp  HomeView.hh  LibraryView.cpp  LibraryView.hh  MainWindow.cpp  MainWindow.hh
src/UIElements/: Dropdown.jsx  HeaderBar.css  HeaderBar.jsx
src/UITools/: ContextMenu.css  ContextMenu.jsx  NotificationManager.css  NotificationManager.jsx
src/components/: App.jsx
src/components/LibraryManagement/: AddLibrary.jsx  CreateLibrary.jsx
src/components/LibraryView/: ContextMenuVideoElement.js  LibraryView.jsx  LibraryViewUtils.js
src/components/LibraryView/LibraryDataManagement/: EditVideoEntryView.jsx  TMDBResults.module.css
src/components/LibraryView/Utils/: formatDuration.js  languageName.js  sortVideoElements.js
src/components/LibraryView/Views/: LibraryViewScroll.jsx
src/components/MainMenu/: MainMenu.jsx  MainMenu.module.css
src/components/UIElements/: CountryFlag.jsx  Dropdown.css  Dropdown.jsx  HeaderBar.css  HeaderBar.jsx
src/components/UITools/: ContextMenu.jsx  NotificationManager.css  NotificationManager.jsx  ScaleProvider.jsx  ScaleWrapper.jsx
src/styles/: colors-dark.css  colors-light.css  colors.css  flags.css  global.css  scaling.css
styles/: mainwindow.css
tools/: AddFieldToJson.js  RemoveFieldFromJson.js
