[package]
name = "ryser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ryser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = {  version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4.39", features = ["serde", "clock"] }
directories = "5.0.1"
ffmpeg-next = "7.1.0"
tauri-plugin-dialog = "2"
uuid = "1.16.0"
regex = "1.11.1"
once_cell = "1.21.1"
unicode-segmentation = "1.12.0"
rand = "0.8.5"
anyhow = "1.0.98"

[features]
backend-only = []
debug-backend = ["backend-only"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
